--- a/landing-page/css/styles.css
+++ b/landing-page/css/styles.css
@@ -74,7 +74,6 @@ section {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    transition: all 350ms ease;
     background: transparent;
 }
 
@@ -136,7 +135,7 @@ section {
 /* ---- Theme Rules ---- */
 /* Landing Container Styles */
 .landing__container {
-    padding: 1em;
+    padding: 0px 1em;
     text-align: left;
     max-width: 640px;
 }
@@ -162,32 +161,31 @@ section:nth-of-type(even) .landing__container {
 /* Section Active Styles */
 
 #section1.active {
-    background: url(../img/Pareidolia.jpg) #CB843D no-repeat;
+    background: url(../img/Pareidolia.jpg) no-repeat;
     background-size: cover;
-    transition: all 350ms ease;
-    transition: color 100ms ease;
     color:white;
 }
 
 #section2.active {
-    background: url(../img/quixotic.png) #DDD no-repeat;
+    background: url(../img/quixotic.png) no-repeat;
     background-size: cover;
-    transition: background 250ms ease;
+}
+
+#section2.active .line{
+    border-top-color:#000;
 }
 
 #section3.active {
-    background: url(../img/elysium.jpg) #ADA596 no-repeat;
+    background: url(../img/elysium.jpg) no-repeat;
     background-size: cover;
-    transition: background 250ms ease;
-    transition: color 100ms ease;
     color:white;
 }
 
 #section4.active {
-    background: url(../img/petrichor.jpg) #6B705C no-repeat;
+    background: url(../img/petrichor.jpg) no-repeat;
     background-size: cover;
     transition: background 250ms ease;
-    color:#000;
+    color:white;
 }
 
 .linktosection.active{
@@ -196,9 +194,6 @@ section:nth-of-type(even) .landing__container {
 
 section.active .line {
     border-top-color:#FFF;
-}
-section:nth-of-type(even).active .line {
-    border-top-color:#000;
 }
 
 /* ------------ MEDIA RULES  ------------  */
@@ -209,8 +204,7 @@ section:nth-of-type(even).active .line {
         padding: 0px 0px;
         }
         .landing__container {
-        max-width: width:50%;;
-        padding: 4em;
+        padding: 0px 4em;
         }
     }
 
@@ -223,7 +217,7 @@ section:nth-of-type(even).active .line {
     @media only screen and (min-width: 1024px) {
         .landing__container {
             max-width: 640px;
-            padding: 4em;
+            padding: 0px 4em;
         }
         h1 {
             font-size: 5em;
